--- a/new.html
+++ b/new.html
@@ -38,7 +38,19 @@
     </div>
 </header>-->
 <div class="bgimg-1">
-
+    <div class="navbar navbar  box-shadow">
+            <div class="container d-flex justify-content-between">
+                <a href="#" class="navbar-brand d-flex align-items-center">
+                    <strong></strong>
+                </a>
+                <button class="btn btn-outline-light" type="button" >
+                        <strong>About me</strong>
+                    </button>
+                <button class="btn btn-outline-light" type="button">
+                    <strong>Contact me</strong>
+                </button>
+            </div>
+        </div>
     <div class="caption">
         <span class="border">HALF PAGE</span><br>
         <span class="border">BACKGROUND IMAGE</span>
